--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "A basic application",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "dev": "node server.js"
+    "dev": "nodemon src/server.js"
   },
   "author": "Skand Sisodia",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.0"
   }
