--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5"
   }
 }
